<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/main_menu_orders"
        android:icon="@drawable/ic_description_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/main_menu_item_orders_text" />

    <item android:id="@+id/main_menu_downloads"
        android:icon="@drawable/ic_file_download_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/main_menu_item_downloads_text" />

    <item android:id="@+id/main_menu_dictionary"
        android:icon="@drawable/ic_translate_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/main_menu_item_dictionary_text" />

    <item android:id="@+id/main_menu_exit"
        android:title="@string/main_menu_item_exit_text"
        android:icon="@drawable/ic_exit_to_app_white_24dp"
        app:showAsAction="never"/>
</menu>