<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeefee">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#eeefee"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="natus.diit.com.libhelper.LoginActivity">

                <EditText
                    android:id="@+id/emailText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/et_sig"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress">
                    <requestFocus />

                </EditText>

                <EditText
                    android:id="@+id/nameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/et_sig"
                    android:hint="@string/prompt_name"
                    android:inputType="textEmailAddress">

                </EditText>

                <EditText
                    android:id="@+id/surnameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/et_sig"
                    android:hint="@string/prompt_surname"
                    android:inputType="textEmailAddress">

                </EditText>

                <EditText
                    android:id="@+id/libCardText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/et_sig"
                    android:hint="@string/prompt_library_card"
                    android:inputType="textEmailAddress">
                </EditText>

                <EditText
                    android:id="@+id/passwordText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/et_sig"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword">
                </EditText>


                <EditText
                    android:id="@+id/passwordConfirmationText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/et_sig"
                    android:hint="@string/prompt_confirm_password"
                    android:imeActionId="@+id/login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword">

                </EditText>

                <Button
                    android:id="@+id/registerFinishedButton"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/et_sig"
                    android:text="@string/register_button_text"
                    android:textStyle="bold" />
            </LinearLayout>
</ScrollView>
