<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeefee"
    android:fillViewport="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dictionary_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"

    tools:context=".MainActivity" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="22sp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:text="@string/dict_text_header"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dictionarySearchField"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/et_sig"
        android:layout_marginTop="10dp"
        android:hint="@string/dictionary_search_field_hint"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/translate_direction_spinner"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="end"
        android:layout_gravity="center_horizontal" />


    <Button
        android:id="@+id/dictionarySearchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/et_sig"
        android:layout_marginBottom="10dp"
        android:text="@string/dictionary_search_button_text" />

</LinearLayout>
</ScrollView>