<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/passw_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <include
            android:id="@+id/my_toolbar"
            layout="@layout/toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    app:srcCompat="@drawable/diit_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/sign_in_welcome"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/libCardText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_library_card"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColorLink="@color/colorAccent">

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1" />


            <CheckBox
                android:id="@+id/checkboxID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="10dp"
                android:text="@string/checkLogin"
                android:textSize="14sp" />

            <Button
                android:id="@+id/sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/btn_sign_in"
                android:text="@string/action_sign_in"
                android:textColor="@color/colorBlack" />
            <!--
                <Button
                    android:id="@+id/registerButton"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/btn_sign_in"
                    android:text="@string/register_button_text"
                    android:textColor="@color/colorBlack" />
            -->
        </LinearLayout>
    </LinearLayout>
</ScrollView>